--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en" dir="LTR">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Makam following tool</title>
+    <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Laila:300,400,500,600,700&amp;subset=devanagari,latin-ext" rel="stylesheet">
     <style>
       body {padding: 0; margin: 0; font-family: 'Laila', serif;}
@@ -16,6 +17,15 @@
     <script src="scripts/sketch.js"></script>
   </head>
   <body>
+
+	<nav>
+      <a id="language" href="tr/index.html">
+        <img id="flag" src="images/turkish.png" alt="turkish flag">
+        Türkçe
+      </a>      
+      <a id="help" href="../help.html">Help</a>
+	</nav>
+
     <div id="sketch-holder">
       <a id="info-link" target="_blank" a:link="text-decoration: none"></a>
     </div>
