--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img id="flag" src="images/turkish.png" alt="turkish flag">
         Türkçe
       </a>      
-      <a id="help" href="../help.html">Help</a>
+      <a id="help" href="help.html">Help</a>
 	</nav>
 
     <div id="sketch-holder">
