--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
 
   <body>
 	<nav>    
-		<a id="home" href="../index.html">Home</a>
+		<a id="home" href="index.html">Home</a>
 	</nav>
 	<div id="sketch-line">
 		<a id="info-link" target="_blank" a:link="text-decoration: none"></a>
