Further bug fixes

--- a/tr/help.html
+++ b/tr/help.html
@@ -26,13 +26,14 @@
 		<p>Parça seçildiğinde sesi yüklemek için sağ üst köşedeki "Sesi Yükle" butonuna tıklayın.</p>
 		<h3>Arayüz</h3>
 		<p>Ses yüklendiğinde arayüz ekranda belirecek.</p>
-		<p>Parça bilgileri arayüz üzerinde gösterilir. Daha fazla bilgi için sağ yukarı kısımdaki  "+parça bilgisi" butonuna basın.</p>
-		<p>Ekranın merkezindeki üst üste, değişen aralıklarla konumlanmış yatay çizgiler parçanın makamına ait perdelere karşılık gelir. Buradaki her perde logaritmik cent ölçüsü ile tanımlanır. Çizgilerin sağ tarafındaki sayılar o perdenin karar perdesine olan mesafesine karşılık gelir. Arel-Ezgi-Uzdilek sistemine göre karşılığı olan perdeler parantez içinde isimleri ile verilir. Çizgilerin sol tarafındaki harfler ise o perdenin sesini bilgisayarınız ile üretmeniz için kullanmanız gereken klavye tuşunu belirtir.Müzik çalarken, makam bu çizgiler üzerinde bir kırmızı daire ile takip edilecek. Bu çizgiyi izlerken müziği dinlemenizin Türk/Osmanlı Sanat Müziğini daha iyi kavramınızı sağlyacağını düşünüyoruz.</p>
+		<p>Parça bilgileri arayüz üzerinde gösterilir. Daha fazla bilgi için sağ üst kısımdaki  "+parça bilgisi" butonuna basın.</p>
+		<p>Ekranın merkezindeki üst üste, birbirine değişen aralıklarla konumlanmış yatay çizgiler parçanın makamına ait perdelere karşılık gelir. Buradaki her perde logaritmik cent ölçüsü ile tanımlanır. Çizgilerin sağ tarafındaki sayılar o perdenin karar perdesine olan mesafesine cent cinsinden karşılık gelir. Arel-Ezgi-Uzdilek sistemine göre karşılığı olan perdeler parantez içinde isimleri ile verilir. Çizgilerin sol tarafındaki harfler ise o perdenin sesini bilgisayarınız ile üretmeniz için kullanmanız gereken klavye tuşunu belirtir.Müzik çalarken makam, bu çizgiler üzerinde bir kırmızı daire ile takip edilecek. Çizgiyi izlerken müziği dinlemenizin Türk/Osmanlı Sanat Müziğini daha iyi kavramınızı sağlayacağını düşünüyoruz.</p>
 		<h3>Çalma</h3>
-		<p>Ses yüklendiğinde, ses yükleme butonu parçanın oynatılmaya hazır olduğunu "Çal!" yazarak bildirecek. Bu butona basarak çalmaya başlayın. Artık "Durdur" yazan bu butona basarak çalmayı durdurabilirsiniz.</p>
+		<p>Ses yüklendiğinde, ses yükleme butonu parçanın oynatılmaya hazır olduğunu "Çal!" yazarak bildirecek. Bu butona basarak çalmaya başlayın. Parçayı durdurmak içinse artık "Durdur" yazan aynı butona basabilirsiniz.</p>
 		<p>Aşağıdaki zaman çubuğu üzerinde istediğiniz bir zamana tıklayarak  herhangi bir parça zamanına atlayabilirsiniz.</p>
 		<h3>Klavye Etkileşimi</h3>
-		<p>Klavyenizdeki sağ ok tuşunu kullanarak parçayı 5 saniye ileri, sol ok tuşunu kullanarak 5 saniye geri sarabilirsiniz.</p>
+		<p>Klavyenizdeki sağ ve sol ok tuşlarını kullanarak parçayı 5 saniye ileri veya geri sarabilirsiniz.</p>
+		<p>Boşluk tuşunu kullanarak çalma ve durdurma arasında geçiş yapabilirsiniz.</p>
 		<p style="color:red;">Perdelere karşılık gelen tuşlara basarak makamı icra edebilirsiniz.</p>
 		<h3>Döngü Modu</h3>
 		<p>Ses yüklendiğinde döngü butonu aktifleşecek. Bu butonu kullanarak döngü moduna girebilir ve parçanın istediğiniz kısımlarını döngü şeklinde dinleyebilirsiniz. Döngü modunda iken zaman çubuğu üzerinde iki noktaya tıklayın, bu noktalar gri çizgilerle belirecek. Seçilen kısım siz döngü modundan çıkana kadar döngü halinde çalınacak. Döngü modundan çıkmak için döngü tuşuna basın.</p>
