--- a/help.html
+++ b/help.html
@@ -22,24 +22,21 @@
 	</div>
 	<main>
 	<h3>Initilization</h3>
-	<p>Start by selecting a recording using the dropdown menu on the upper left corner. Recordings are categorized into 4 makamlar and 6 Usüller.</p>
+	<p>Start by selecting a recording using the dropdown menu on the upper left corner. Recordings are categorized into 4 makamlar and 6 usuller.</p>
 	<p>Upon selection of the recording, load the audio using the "Load Audio" button on the upper right corner. </p>
-	<br>
 	<h3>Interface</h3>
 	<p>When the audio is loaded, the interface will appear on the canvas.
 	<p>The relevant information of the record will be desplayed on the screen. For more information, click on "+record info" button on the upper right side. 
-	<p>On the center of the screen you will see horizontal lines that are stacked on top of each other with varying distances, corresponding to the perdeler that belong to the Makam creating the melody. Each of the perdeler are indicated here using the logarithmic scale, cents. The numeric values on the right correspond to the distance of the perde to the tonic of the scale. The ones that are defined by the AEU system are presented with their names alongside. The letter that is displayed on the left side of a line correspond to the keyboard element that will create that with the help of the computer keyboard. As the recording plays, the melody will be tracked on this melody line with a red dot. By observing this line and listening to the music together, we wish to improve your appreciation of Turkish/Ottoman Makam Music.</p>
-	<br>
+	<p>On the center of the screen you will see horizontal lines that are stacked on top of each other with varying distances in between, corresponding to the perdeler that belong to the Makam. These perdeler create the melody and each of them are indicated here using the logarithmic scale, cents. The numeric values on the right correspond to the distance of the perde to the tonic of the scale. The ones that are defined by the AEU system are presented with their names alongside. The displayed eltter on the left side of a line corresponds to the keyboard element that will generate that sound with the help of the computer keyboard. As the recording plays, the melody will be tracked on this melody line with a red dot. By observing this dot and listening to the music together, we aim to improve your appreciation of Turkish/Ottoman Makam Music.</p>
 	<h3>Playing</h3>
-	<p>When the audio is loaded, the button will indicate that the record is ready to play by displaying "Play!". Click on the button to start playing. You can pause by clicking on the same button that now displays "Pause".</p>
+	<p>When the audio is loaded, the button will indicate that the record is ready to play by displaying "Play!". Click on the button to start playing. You can stop playing by clicking on the same button that now displays "Pause".</p>
 	<p>Using the time bar below, you can skip to any time instant by clicking on the time instant that you whish to skip to.</p>
-	<br>
 	<h3>Keyboard Interactions</h3>
-	<p>You can skip 5 seconds by using the right arrow key on your keyboard, and rewind 5 seconds by using the left arrow key.</p>
+	<p>You can skip and rewind 5 seconds by using the right and left arrow keys on your keyboard.</p>
+	<p>Use the space bar for playing or pausing.</p>
 	<p style="color:red;">Using the keys that are indicated on the left side of the melody line, you can play the perdeler that create the melody.</p>
-	<br>
 	<h3>Loop Mode</h3>
-	<p>Once the record is loaded, the loop button will be activated. You can loop any section of the record by clicking on the loop button and entering the loop mode. Inside the loop mode you can click on any two time instants on the time bar and the boundaries of the looped section will be indicated by two gray lines. This section will be played on a loop, until you exit the loop mode by clicking on the loop button. </p>
+	<p>Once the record is loaded, the loop button will be activated. You can loop any section of the record by clicking on the loop button and entering the loop mode. Inside the loop mode you can click on any two time instants on the time bar and the boundaries of the looped section will be indicated by two gray lines. This section will be played on a loop, until you turn off the loop mode by clicking on the loop button. </p>
 	<p style="color:red;">Looping is especially helpfull for learning to play a composition.</p>
 	</main>
 	<div id="sketch-line">
